# DistributedDocumentStorage

./: CMakeLists.txt  README.md
src/: Config.h  DocumentStorage.cpp  DocumentStorage.h  Object.cpp  Object.h  ObjectStorage.cpp  ObjectStorage.h  Property.cpp  Property.h  Serialize.cpp  Serialize.h  Tranzaction.cpp  Tranzaction.h  TranzactionStorage.cpp  TranzactionStorage.h
test/: Main.cpp
